# policies

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  README.md  TEMPLATE-PDD.md  adrs.json  debug.rego  docker-compose.yml  package-lock.json  package.json  policy_exceptions.json  pom.xml  pyproject.toml
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci-schema-validation.yml  policy-check.yml
api/: Dockerfile  enforcePolicyMiddleware.js  package.json  server.js
api/middleware/: enforcePolicyMiddleware.js
ci/: check_tech_policy.py  dependency_metadata.json  policy_checks.yml
docs/architecture/design/: adr-001-valid-adr-comp.md  adr-005-invalid.md
docs/governance/: README.md
docs/governance/policies/: adr_policy.rego  adr_storage_policy.rego  adr_template_policy.rego  vendor_lock_policy.rego
infrastructure/: docker-compose.yml
opa/policies/: allow_template_rego.rego
opa/tests/: allow_template_rego_test.rego
policies/: PDD-ADR-TEMPLATE.md  PDD-ADR-VERSIONING.md  PDD-CODE-OWNERSHIP.md  PDD-DEPENDENCY-MANAGEMENT.md  PDD-GIT-WORKFLOW.md  PDD-SECURITY-GUIDELINES.md  PDD-SOFTWARE-VETTING.md  README.md  compatibility.rego  metadata.rego  pdd-000-security.md  pdd-001-provenance.md  pdd-004-tech-dependency.md  pdd-005-adr-versioning.md  style.rego
policy/: allow_template_rego.rego
scripts/: check_dependencies.sh  check_tech_policy.py  collect_adrs.py
